# chipforge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TRACKER_DAW_PROJECT_SPEC.md  vcpkg.json
src/: main.cpp
src/App/: ChipForgeApp.cpp  ChipForgeApp.h  MainWindow.cpp  MainWindow.h
src/Data/: Pattern.cpp  Pattern.h  PatternCell.cpp  PatternCell.h  PatternEditorModel.cpp  PatternEditorModel.h
src/Effects/: TwoPoleResonantLowPass.cpp  TwoPoleResonantLowPass.h
src/Engine/: AudioEngine.cpp  AudioEngine.h  TrackerEngine.cpp  TrackerEngine.h  TransportState.cpp  TransportState.h
src/Synths/NES2A03/: NES2A03Synth.cpp  NES2A03Synth.h
src/UI/LookAndFeel/: ChipForgeLookAndFeel.cpp  ChipForgeLookAndFeel.h
src/UI/Shared/: Toolbar.cpp  Toolbar.h
src/UI/TrackerView/: TrackerView.cpp  TrackerView.h
tests/: CMakeLists.txt  Main.cpp  NES2A03SynthTests.cpp  PatternEditorModelTests.cpp  PatternTests.cpp  TrackerEngineTests.cpp  TransportStateTests.cpp  test_smoke.cpp
tests/effects/: test_two_pole_lowpass.cpp
